# M348-Group-Project-5

./: .gitignore  CMakeLists.txt  README.md  h01.m  make_arbitrary_plot.py  make_plot.m  output.txt
include/: BackwardEulerMethod.h  RungeKuttaMethod.h  TrapezoidalMethod.h  Util.h  backEulerMethod.h  matlabPlot.h  trapMethod.h  trapMethod2.h
output/: make_plots.py  make_plots_python.py
src/: BackwardEulerMethod.cpp  Main.cpp  PredatorPrey.cpp  RungeKuttaMethod.cpp  TrapezoidalMethod.cpp  Util.cpp  backEulerMethod.cpp  backEulerMethodMain.cpp  matlabPlot.cpp  matrix.cpp  trapMethod.cpp  trapMethod2.cpp  trapMethodMain.cpp  trapMethodMain2.cpp
